@@ -1,0 +1,86 @@
+{
+  "culture": "es",
+  "texts": {
+    "HelloWorld": "¡Hola Mundo!",
+    "ChangeLanguage": "Cambiar idioma",
+    "HomePage": "Página principal",
+    "About": "Sobre",
+    "Home_Description": "¡Bienvenido!",
+    "About_Description": "Esta es una plantilla de inicio simple para usar ASP.NET Core con el marco ABP",
+    "Swagger": "Swagger",
+    "InvalidToken": "Token no valido",
+    "UnauthenticatedMehod": "Método no autenticado",
+    "UserNotFound": "Usuario no encontrado",
+    "OrganizationAlreadyExists": "Organización ya presente",
+    "OrganizationNotFound": "Organización no encontrada",
+    "InvalidFile": "Archivo inválido",
+    "InvalidFilename": "Nombre de archivo inválido",
+    "FileTooBig": "Archivo demasiado grande (máx: 50MB)",
+    "MimeTypeNotAccepted": "MimeType no aceptado",
+    "InvalidCompetenceAreaId": "ID de área de competencia no válida: {0}",
+    "InvalidActivityId": "ActivityId no válido",
+    "InvalidCoordinatorId": "ID de coordinador no válido: {0}",
+    "InvalidPersonId": "Identificación de persona no válida: {0}",
+    "InvalidMissionId": "ID de misión no válido: {0}",
+    "InvalidOrganizationId": "ID de organización no válido: {0}",
+    "InvalidReportId": "ID de Report no válido: {0}",
+    "InvalidCredentials": "Credenciales no válidas",
+    "InvalidRole": "Rol no válido: {0}",
+    "InvalidTeamId": "ID de equipo no válido: {0}",
+    "InvalidReportRequestId": "ID de ReportRequest no válido: {0}",
+    "InvalidCommunicationId": "ID de comunicación no válido: {0}",
+    "InvalidEntityId": "ID no válido para la entidad {1}: {0}",
+    "MissingRequiredField": "El campo {0} no puede faltar ni ser nulo",
+    "OrganizationCannotBeDeleted": "La organización con ID {0} no se puede eliminar. Algunos usuarios aún forman parte de ella",
+    "FusionAuthUnknonwError": "Error desconocido de FusionAuth",
+    "InvalidMissionUpdateStatus": "El estado de la misión no se puede actualizar al estado: {0}",
+    "OrganizationRequiredForOperation": "Se requiere ser miembro de una organización para realizar esta operación",
+    "OrganizationMismatch": "No se permite el intento de asociación entre las entidades {0} / {1} y {2} / {3} porque pertenecen a organizaciones diferentes",
+    "UnexistentEntities": "Las siguientes entidades de tipo {0} no existen: {1}",
+    "UnexistentEntityTypeName": "No es un nombre de entidad válido: {0}",
+    "OnlyOneMissionCoordinator": "Una misión puede tener un equipo o una persona como coordinadores, no ambos",
+    "AtLeastOneMissionCoordinator": "Una misión debe tener un coordinador, ya sea una persona o un equipo",
+    "InvalidJson": "Json no válido: {0}",
+    "Forbidden_DifferentOrganizations": "Prohibido: discrepancia de organización ",
+    "CannotChangeOrganization": "No se puede cambiar de organización aquí",
+    "Forbidden_InsufficientRole": "Tu rol no permite esta operación",
+    "Forbidden_InsufficientRoleOrUnassociatedEntity": "Tu rol no permite esta operación o la entidad no está asociada a tu perfil",
+    "SqlSingleDuplicate": "Ya existe una entidad con valor {0}",
+    "UnknownError": "Error desconocido",
+    "SqlComboDuplicate": "Ya existe una relación con los mismos valores para {0}",
+    "FormFileNotReceived": "La solicitud no contiene un archivo o utiliza el tipo de solicitud http incorrecto",
+    "ParentNotYetDeclared": "La actividad principal {0} debe declararse antes de que otro pueda hacer referencia a ella",
+    "NotALanguageCode": "No es un código de idioma válido: {0}",
+    "AzureBackupFailed": "La operación falló debido a la imposibilidad de crear una copia de seguridad remota. Vuelva a intentarlo",
+    "GeoJsonDetail.PersonActionActivity": "{0} haciendo actividad {1}",
+    "GeoJsonDetail.PersonActionStatus": "{0} tiene estado {1}",
+    "GeoJsonDetail.PersonActionTracking": "{0} seguimiento: {1}",
+    //Notification section
+    "Notification_Mission_Create_Title": "Nueva misión",
+    "Notification_Mission_Update_Title": "Actualización de la misión",
+    "Notification_Mission_Create_Body": "Se ha creado una nueva misión: '{0}'",
+    "Notification_Mission_Update_Body": "¡La misión '{0}' ha sido actualizada!",
+    "Notification_Mission_Update_Status_Body": "El estado de la misión '{0}' se ha actualizado a '{1}'",
+    "Notification_Communication_Create_Title": "Nueva comunicación",
+    "Notification_Communication_Update_Title": "Comunicación actualizada",
+    "Notification_Communication_Create_Body": "Nueva comunicación: '{0}'",
+    "Notification_Communication_Update_Body": "Actualización de comunicación: '{0}'",
+    "Notification_ReportRequest_Create_Title": "Nueva Report Request",
+    "Notification_ReportRequest_Create_Body": "Se ha creado Report Request '{0}'",
+    "Notification_ReportRequest_Update_Title": "Report Request actualizada",
+    "Notification_ReportRequest_Update_Body": "¡Se ha actualizado la Report Request '{0}'!",
+    "Notification_ReportRequest_Delete_Title": "Report Request eliminada",
+    "Notification_ReportRequest_Delete_Body": "Se ha eliminado la Report Request '{0}'!",
+    "TeamNotInOrganization": "El equipo {0} no pertenece a la organización {1}",
+    "EntityOutsideOrganization": "No tienes la visibilidad de este elemento",
+    "MissingPermission": "No tienes permiso para realizar esta operación",
+    "InvalidActivityCode": "Código de actividad no válido: {0}, longitud máxima permitida: {1}",
+    "CategoryImportIndexMustBeFirst": "La hoja de índice debe ser la primera",
+    "MissingField": "Falta campo: {0}",
+    "TimeWindowSizeError": "Reducir el tamaño de la ventana de tiempo",
+    "TimeWindowLimitError": "La fecha de finalización debe ser mayor que la fecha de inicio",
+    "InvalidParentId": "ID de padre no válido: {0}",
+    "InvalidCategoryRangeValue": "Valor de rango de categoría no válido: {0}",
+    "InvalidCategoryNumericValue": "Valor numérico de categoría no válido: {0}"
+  }
+}
